# openfpga-chip32-sim

./: .gitignore  Cargo.toml  LICENSE  README.md
example/: LICENSE  data.json  example_chip32.asm
src/: apf.rs  cpu.rs  lib.rs  main.rs  mem.rs
src/tui/: main.rs  memory.rs  mod.rs  modes.rs  util.rs
src/util/: bitwise.rs  mod.rs  num.rs  serde.rs
test/asm/: load.asm
tests/: alu.rs  apf.rs  data.json  load.rs  log.rs  read.rs  stack.rs  stack_jump.rs  util.rs
tests/asm/: alu.asm  load.asm  log.asm  read.asm  stack_jump.asm  test.asm
